--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="">
                          <img src="assets/images/5e9e16d2dc2f3497598536.gif" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Apollo FN</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="">Apollo FN</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
